maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:11: error: value =- is not a member of Int
      sommeAngle=-1
                ^